@@ -165,7 +165,7 @@ CONFIG_PIC32MX_USBDEV=n
 CONFIG_PIC32MX_USBHOST=n
 CONFIG_PIC32MX_CAN1=n
 CONFIG_PIC32MX_CAN2=n
-CONFIG_PIC32MX_ETHERNET=n
+CONFIG_PIC32MX_ETHERNET=y
 CONFIG_PIC32MX_IOPORTA=y
 CONFIG_PIC32MX_IOPORTB=y
 CONFIG_PIC32MX_IOPORTC=y
@@ -440,8 +440,10 @@ CONFIG_DEBUG=n
 CONFIG_DEBUG_VERBOSE=n
 CONFIG_DEBUG_SYMBOLS=n
 CONFIG_DEBUG_SCHED=n
+CONFIG_DEBUG_USB=n
 CONFIG_DEBUG_NET=n
 CONFIG_DEBUG_LCD=n
+CONFIG_DEBUG_GRAPHICS=n
 CONFIG_DEBUG_INPUT=n
 
 CONFIG_HAVE_CXX=n
@@ -690,9 +692,9 @@ CONFIG_FB_HWCURSORIMAGE=n
 #   option will enable a limited form of memory mapping that is
 #   implemented by copying whole files into memory.
 #
-CONFIG_FS_FAT=n
-CONFIG_FAT_LCNAMES=n
-CONFIG_FAT_LFN=n
+CONFIG_FS_FAT=y
+CONFIG_FAT_LCNAMES=y
+CONFIG_FAT_LFN=y
 CONFIG_FAT_MAXFNAME=32
 CONFIG_FS_NXFFS=n
 CONFIG_FS_ROMFS=n
@@ -779,7 +781,7 @@ CONFIG_MMCSD_HAVECARDDETECT=n
 # CONFIG_NET_FWCACHE_SIZE - number of packets to remember when
 #   looking for duplicates
 #
-CONFIG_NET=n
+CONFIG_NET=y
 CONFIG_NET_NOINTS=n
 CONFIG_NET_MULTIBUFFER=y
 CONFIG_NET_IPv6=n
